--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "compile:watch": "tsex compile --watch",
     "test": "tsex test",
     "test:watch": "tsex test --watch",
-    "prepublishOnly": "npm run clean && npm run compile && npm run test"
+    "prepublishOnly": "tsex prepare"
   },
   "keywords": [
     "detect",
@@ -26,10 +26,9 @@
     "quick"
   ],
   "devDependencies": {
-    "fava": "^0.0.6",
-    "benchloop": "^1.3.2",
-    "detect-newline": "^4.0.0",
-    "tsex": "^1.0.5",
-    "typescript": "^4.6.3"
+    "benchloop": "^2.0.0",
+    "fava": "^0.1.1",
+    "tsex": "^2.1.0",
+    "typescript": "^4.9.5"
   }
 }
